# Traders_dbt

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: blank.yml  ci_checks.yml
database_src/: README.md  northwind- DDL.sql  northwind- DML.sql
macros/: dw_vault.sql  ensmeble_vlt.sql  hashed_key.sql  hub_vault.sql  hub_vault_init.sql  sat_vault.sql  source_columns.sql
macros/vault/: dw_vault.sql  ensmble_vlt.sql
models/: src_schema.yml
models/semantic/: sem__closed_order_tax.sql  sem__closed_order_tax.yml  sem__d_customer_address.sql  sem__d_customer_address.yml  sem__f_order_main.sql  sem__f_order_main.yml  sem__profit_metric.sql  sem__profit_metric.yml
models/staging/: stg_northwind__customers.sql  stg_northwind__customers.yml  stg_northwind__dates.sql  stg_northwind__dates.yml  stg_northwind__employees.sql  stg_northwind__employees.yml  stg_northwind__inventory.sql  stg_northwind__inventory.yml  stg_northwind__order_details.sql  stg_northwind__order_details.yml  stg_northwind__orders.sql  stg_northwind__orders.yml  stg_northwind__products.sql  stg_northwind__products.yml  stg_northwind__purchase_orders.sql  stg_northwind__purchase_orders.yml  stg_northwind__shippers.sql  stg_northwind__shippers.yml  stg_northwind__suppliers.sql  stg_northwind__suppliers.yml  test1.sql
models/vault/: Vlt__e_order_details_product.sql  Vlt__e_order_details_product.yml  vlt__e_order_customer.sql  vlt__e_order_customer.yml  vlt__h_order_customer.sql  (+6 more)
src_database/: README.md  northwind- DDL.sql
(+18 files in other folders)
