[tool.poetry]
name = "dbt-traders"
version = "0.1.0"
description = "This toml file orchestrate the versions of the dependencies"
authors = ["Ammar Sahyoun <ammarzgr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.0"
apache-airflow-providers-postgres = "^5.11.3"
dbt-postgres = "^1.8.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
