[tool.poetry]
name = "dbt-traders"
version = "0.1.0"
description = "This toml file orchestrates the versions of the dependencies"
authors = ["Ammar Sahyoun <ammarzgr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.0"
apache-airflow-providers-postgres = "^5.11.3"
dbt-core = "^1.8.6"
dbt-postgres = "^1.8.2"
pandas = "^2.2.2"
sqlfluff = "^3.1.0"
pre-commit = "^3.8.0"

[tool.sqlfluff.core]
templater = "jinja"
dialect = "postgres"
exclude_rules = "L031, L016, L034"  # Removed invalid rules
ignore = "templating"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = false

[tool.sqlfluff.rules]
tab_space_size = 2

[tool.sqlfluff.rules.L010]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.L016]
max_line_length = 125

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
